use imported deps and config only, no state
